--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,5 +1,5 @@
 name: loft
-version: 0.3.1
+version: 0.3.2-beta.0
 commands:
   - name: "login"
     baseArgs: ["login"]
@@ -43,16 +43,16 @@ commands:
 binaries:
   - os: darwin
     arch: amd64
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.1/loft-devspace-plugin-darwin-amd64
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-darwin-amd64
   - os: linux
     arch: amd64
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.1/loft-devspace-plugin-linux-amd64
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-linux-amd64
   - os: linux
     arch: "386"
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.1/loft-devspace-plugin-linux-386
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-linux-386
   - os: windows
     arch: amd64
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.1/loft-devspace-plugin-windows-amd64.exe
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-windows-amd64.exe
   - os: windows
     arch: "386"
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.1/loft-devspace-plugin-windows-386.exe
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-windows-386.exe
