--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,5 +1,5 @@
 name: loft
-version: v0.3.2-beta.0
+version: v0.3.2-beta.1
 commands:
   - name: "login"
     baseArgs: ["login"]
@@ -40,19 +40,24 @@ commands:
   - name: "space"
     baseArgs: ["use", "space"]
     subCommand: "use"
+vars:
+  - name: LOFT_CLUSTER
+    baseArgs: ["vars", "cluster"]
+  - name: LOFT_USERNAME
+    baseArgs: ["vars", "username"]
 binaries:
   - os: darwin
     arch: amd64
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-darwin-amd64
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.1/loft-devspace-plugin-darwin-amd64
   - os: linux
     arch: amd64
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-linux-amd64
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.1/loft-devspace-plugin-linux-amd64
   - os: linux
     arch: "386"
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-linux-386
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.1/loft-devspace-plugin-linux-386
   - os: windows
     arch: amd64
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-windows-amd64.exe
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.1/loft-devspace-plugin-windows-amd64.exe
   - os: windows
     arch: "386"
-    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.0/loft-devspace-plugin-windows-386.exe
+    path: https://github.com/loft-sh/loft/releases/download/v0.3.2-beta.1/loft-devspace-plugin-windows-386.exe
