--- a/plugin.yaml
+++ b/plugin.yaml
@@ -22,6 +22,9 @@ commands:
   - name: "spaces"
     baseArgs: ["list", "spaces"]
     subCommand: "list"
+  - name: "secrets"
+    baseArgs: ["list", "secrets"]
+    subCommand: "list"
   - name: "clusters"
     baseArgs: ["list", "clusters"]
     subCommand: "list"
@@ -40,6 +43,9 @@ commands:
   - name: "space"
     baseArgs: ["use", "space"]
     subCommand: "use"
+  - name: "secret"
+    baseArgs: ["set", "secret"]
+    subCommand: "set"
 vars:
   - name: LOFT_CLUSTER
     baseArgs: ["vars", "cluster"]
