--- a/plugin.yaml
+++ b/plugin.yaml
@@ -55,6 +55,9 @@ binaries:
   - os: darwin
     arch: amd64
     path: https://github.com/loft-sh/loft-devspace-plugin/releases/download/v1.12.0/loft-devspace-plugin-darwin-amd64
+  - os: darwin
+    arch: arm64
+    path: https://github.com/loft-sh/loft-devspace-plugin/releases/download/v1.12.0/loft-devspace-plugin-darwin-arm64
   - os: linux
     arch: amd64
     path: https://github.com/loft-sh/loft-devspace-plugin/releases/download/v1.12.0/loft-devspace-plugin-linux-amd64
